feat: добавлен экран загрузки с прогресс-баром

--- a/default.project.json
+++ b/default.project.json
@@ -23,6 +23,12 @@
           "$path": "src/Client"
         }
       }
-    }
+    },
+    "ReplicatedFirst": {
+    "$className": "ReplicatedFirst",
+    "ReplicatedFirst": {
+    "$path": "src/ReplicatedFirst"
+  }
+}
   }
 }
