добавленны система рандома в днк по множественным пунктам ( не добавленна система их хранения )

--- a/default.project.json
+++ b/default.project.json
@@ -29,6 +29,13 @@
     "ReplicatedFirst": {
     "$path": "src/ReplicatedFirst"
   }
-}
+},
+
+  "ServerStorage": {
+			"$className": "ServerStorage",
+			"Config": {
+				"$path": "src/ServerStorage/Config"
+			}
+		}
   }
 }
